[package]
authors = ["Robert Collins <robertc@robertcollins.net>"]
categories = ["filesystem", "os"]
description = "Implementation of 'at' functions for various platforms"
edition = "2021"
license = "Apache-2.0"
name = "fs_at"
readme = "README.md"
repository = "https://github.com/rbtcollins/fs_at.git"
rust-version = "1.63.0"
version = "0.1.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = ["dep:log"]
"workaround-procmon" = ["dep:once_cell"]

[dependencies]
cfg-if = "1.0.0"
cvt = "0.1.1"
log = { version = "0.4.17", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
fs-set-times = "0.20.0"
rayon = "1.6.1"
tempfile = "3.8.0"
test-log = "0.2.11"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.147"
# Saves nontrivial unsafe and platform specific code (Darwin vs other Unixes,
# MAX_PATH and more : consider it weak and something we can remove if expedient
# later.
nix = { version = "0.26.2", default-features = false, features = ["dir"] }

[target.'cfg(windows)'.dependencies]
aligned = "0.4.1"
once_cell = { optional = true, version = "1.18.0" }

[target.'cfg(windows)'.dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_Ioctl",
]
version = "0.48.0"
